--- a/flex-projeto/index.html
+++ b/flex-projeto/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Turismos</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -16,9 +17,9 @@
                 <h1>FlexTurismos</h1>
             </div>
             <ul class="list-items">
-                <li><a href="#quem-somos">Quem Somos</a></li>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#planos">Planos</a></li>
+                <li><a href="https://github.com/m4uriciosn">Quem Somos</a></li>
+                <li><a href="https://github.com/m4uriciosn">Serviços</a></li>
+                <li><a href="https://github.com/m4uriciosn">Planos</a></li>
             </ul>
         </div>
     </header>
@@ -27,7 +28,7 @@
         <div class="texto-apresentacao">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="" class="btn">Saiba Mais!</a>
+            <a href="https://github.com/m4uriciosn" class="btn">Saiba Mais!</a>
         </div>
 
         <div>
@@ -60,17 +61,17 @@
                 <div class="item-servico">
                     <div><img src="./images/icon-2.png" alt="hospedagens"></div>
                     <p>Hospedagens</p>
-                    <a href="#">Comprar Agora</a>
+                    <a href="https://github.com/m4uriciosn">Comprar Agora</a>
                 </div>
                 <div class="item-servico">
                    <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
                    <p>Pacotes de viagens</p>
-                   <a href="#">Comprar Agora</a>
+                   <a href="https://github.com/m4uriciosn">Comprar Agora</a>
                 </div>
                 <div class="item-servico">
                     <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
                     <p>Roteiros personalizados</p>
-                    <a href="#">Comprar Agora</a>
+                    <a href="https://github.com/m4uriciosn">Comprar Agora</a>
                 </div>
             </div>
         </div>
@@ -91,7 +92,7 @@
                     <li>Serviços de quarto</li>
                     <li>Guia turístico</li>
                 </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
+                <a href="https://github.com/m4uriciosn" class="btn">Saiba Mais!</a>
             </div>
             <div class="item-planos">
                 <h3>Plano 2</h3>
@@ -101,7 +102,7 @@
                     <li>Guia turístico</li>
                     <li>Roteiro de trilhas</li>
                 </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
+                <a href="https://github.com/m4uriciosn" class="btn">Saiba Mais!</a>
             </div>
             <div class="item-planos">
                 <h3>Plano 3</h3>
@@ -113,7 +114,7 @@
                     <li>Serviço personalizado</li>
                     <li>Área Vip</li>
                 </ul>
-                <a href="#" class="btn">Saiba Mais!</a>
+                <a href="https://github.com/m4uriciosn" class="btn">Saiba Mais!</a>
             </div>
         </div>
 
